# wavelib

./: .gitignore  CMakeLists.txt
auxiliary/: CMakeLists.txt  denoise.c  waux.c
header/: wauxlib.h  wavelib.h
include/: wavefunc.h  wtmath.h
src/: CMakeLists.txt  conv.c  cwt.c  cwt.h  cwtmath.c  hsfft.c  real.c  wavefilt.c  wavefunc.c  wavefunc.h  wavelib.c  wtmath.c
test/: CMakeLists.txt  cwttest.c  denoisetest.c  dwpttest.c  dwt2test.c  dwttest.c  modwt2test.c  modwtdenoisetest.c  modwttest.c  swt2test.c  swttest.c  wtreetest.c
unitTests/: CMakeLists.txt
unitTests/wavelibBoostTests/: CMakeLists.txt  tst_dwt.cpp
